# mmk-backend

./: .gitignore  README.md  flake.nix  manage.py  pyproject.toml  pyproject.toml.backup
collectibles/: apps.py  forms.py
collectibles/migrations/: 0001_initial.py
game/: admin.py  models.py  widgets.py
game/migrations/: 0001_initial.py  0002_alter_rarity_options.py  0003_card_spritesheet.py  0004_card_base_move_energy_card_base_move_energy_gain_and_more.py  0005_remove_card_spritesheet_cardsprite.py  0006_card_desperation.py  0007_move_alter_card_desperation_card_moves.py  0008_remove_card_moves_cardmove.py
mmk_panel/: settings.py  urls.py
src/mmk_panel/: asgi.py  settings.py  urls.py  wsgi.py
src/mmk_panel/apps/collectibles/: admin.py  apps.py  filters.py  forms.py  models.py  serializers.py  urls.py  views.py  widgets.py
