[project]
name = "mmk-panel"
version = "0.1.0"
description = "Django backend for the MMK game."
authors = [ ]
requires-python = ">=3.13"
dependencies = [
    "django>=6.0.4",
    "python-dotenv>=0.9.9",
    "psycopg2-binary>=2.9.12",
    "django-storages>=1.14.6",
    "boto3>=1.42.96",
    "pillow>=12.2.0",
]
